--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="box"></div>
+    <div class="box"></div>
     <div class="box">hello</div>
+    <div class="box">mistake</div>
 </body>
 </html>
