--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <div class="box"></div>
     <div class="box">hello</div>
     <div class="box">mistake</div>
+    <div class="box">mistake</div>
 </body>
 </html>
